--- a/Celiac Website/Celiac.html
+++ b/Celiac Website/Celiac.html
@@ -27,22 +27,22 @@
 
 <body>
 
+<div id='container'>
+
 <header>
 
-    <ul>
-      <li><a href="#">About Celiac Disease</a></li>
-      <li><a href="#">Medical Info</a></li>
-      <li><a href="#">Travel Tips</a></li>
-      <li><a href='#'>Recipes</a></li>
+<div id='nav'>
+    <ul class='navbar'>
+      <li class='navbarcontent'><a href="#">About Celiac Disease</a></li>
+      <li class='navbarcontent'><a href="#">Medical Info</a></li>
+      <li class='navbarcontent'><a href="#">Travel Tips</a></li>
+      <li class='navbarcontent'><a href='#'>Recipes</a></li>
     </ul>
+</div>
 
+<div id='title'>
 
-
-
-
-<div class='title'>
-
-	<h1> A Celiac's Guide </h1>
+	<h1 class='section'> A Celiac's Guide </h1>
 	<h2>to Gluten Free Living </h2>
 	<img src='glutenfree.png'>
 
@@ -51,11 +51,13 @@
 </header>
 
 <div class='about'>
-	<h1> About Celiac Disease </h1>
+	<h1 class='section'> About Celiac Disease </h1>
 	<h2> What is Celiac Disease? </h2>
+		<blockquote>
 		<p>
 		Celiac Disease is a genetic autoimmune disorder. When a person with Celiac Disease eats food containing or contaminated with gluten, a protein found in wheat, barley, and rye, their body triggers an immune response that attacks their small intestine. A healthy small intestine has millions of fingerlike projections called villi which help the body absorb nutrients. When someone with Celiac Disease eats gluten, their body will damage or destroy these villi, meaning that the body is unable to absorb nutrients properly. While Celiac Disease is genetic, not all people with the genes actually express the disorder; researchers do not yet know why this is. To read more about Celiac Disease in the scientific literature, follow the links below.
 		</p>
+		</blockquote>
 	<h2> Scientific Papers </h2>
 		<ul>
 			<li> <a href=https://www.researchgate.net/profile/Detlef_Schuppan/publication/14007561_Dieterich_W_Ehnis_T_Bauer_M_Donner_P_Volta_U_Riecken_EO_and_Schuppan_D_Identification_of_tissue_transglutaminase_as_the_autoantigen_of_celiac_disease_Nat_Med_3_797-801/links/5434f40c0cf2dc341daf5d1f/Dieterich-W-Ehnis-T-Bauer-M-Donner-P-Volta-U-Riecken-EO-and-Schuppan-D-Identification-of-tissue-transglutaminase-as-the-autoantigen-of-celiac-disease-Nat-Med-3-797-801.pdf>Celiac Auto-Antigen</a> </li>
@@ -68,125 +70,149 @@
 </div>
 
 <div class='medical'>
-	<h1> Medical Information </h1>
+	<h1 class='section'> Medical Information </h1>
 
 	<h2> Symptoms </h2>
+		<blockquote>
 		<p> Celiac Disease can manifest itself in a wide variety of symptoms. Not every patient with celiac disease suffers the same symptoms, which sometimes can make the disease difficult to diagnose. Below are some common symptoms for children and others for adults. </p>
+		</blockquote>
 
 		<h3> Children and Infants </h3>
+			<blockquote>
 			<p>The symptoms found in children and infants are most often related to the digestive system. Here are some signs to look for: </p>
+			</blockquote>
 			<ul>
-				<li>abdominal bloating and pain</li>
-				<li>chronic diarrhea</li>
-				<li>vomiting</li>
-				<li>constipation</li>
-				<li>pale, foul-smelling, or fatty stool</li>
-				<li>weight loss</li>
-				<li>fatigue</li>
-				<li>irritability and behavioral issues</li>
-				<li>dental enamel defects of the permanent teeth</li>
-				<li>delayed growth and puberty</li>
-				<li>short stature</li>
-				<li>failure to thrive</li>
-				<li>Attention Deficit Hyperactivity Disorder (ADHD)</li>
+				<li class="col-md-6">abdominal bloating and pain</li>
+				<li class="col-md-6">chronic diarrhea</li>
+				<li class="col-md-6">vomiting</li>
+				<li class="col-md-6">constipation</li>
+				<li class="col-md-6">pale, foul-smelling, or fatty stool</li>
+				<li class="col-md-6">weight loss</li>
+				<li class="col-md-6">fatigue</li>
+				<li class="col-md-6">irritability and behavioral issues</li>
+				<li class="col-md-6">dental enamel defects of the permanent teeth</li>
+				<li class="col-md-6">delayed growth and puberty</li>
+				<li class="col-md-6">short stature</li>
+				<li class="col-md-6">failure to thrive</li>
+				<li class="col-md-6">Attention Deficit Hyperactivity Disorder (ADHD)</li>
 			</ul>
 
 			<h3> Adults </h3>
+			<blockquote>
 			<p> Adults often do not experience the same digestive symptoms. Here are some other signs to look for: </p>
+			</blockquote>
 			<ul>
-				<li>unexplained iron-deficiency anemia</li>
-				<li>fatigue</li>
-				<li>bone or joint pain</li>
-				<li>arthritis</li>
-				<li>osteoporosis or osteopenia (bone loss)</li>
-				<li>liver and biliary tract disorders (transaminitis, fatty liver, primary sclerosing cholangitis, etc.)</li>
-				<li>depression or anxiety</li>
-				<li>peripheral neuropathy ( tingling, numbness or pain in the hands and feet)</li>
-				<li>peripheral neuropathy ( tingling, numbness or pain in the hands and feet)</li>
-				<li>seizures</li>
-				<li>migraines</li>
-				<li>missed menstrual periods</li>
-				<li>infertility or recurrent miscarriage</li>
-				<li>canker sores inside the mouth</li>
-				<li>dermatitis herpetiformis (itchy skin)</li>
+				<li class="col-md-6">unexplained iron-deficiency anemia</li>
+				<li class="col-md-6">fatigue</li>
+				<li class="col-md-6">bone or joint pain</li>
+				<li class="col-md-6">arthritis</li>
+				<li class="col-md-6">osteoporosis or osteopenia (bone loss)</li>
+				<li class="col-md-6">liver and biliary tract disorders (transaminitis, fatty liver, primary sclerosing cholangitis, etc.)</li>
+				<li class="col-md-6">depression or anxiety</li>
+				<li class="col-md-6">peripheral neuropathy ( tingling, numbness or pain in the hands and feet)</li>
+				<li class="col-md-6">peripheral neuropathy ( tingling, numbness or pain in the hands and feet)</li>
+				<li class="col-md-6">seizures</li>
+				<li class="col-md-6">migraines</li>
+				<li class="col-md-6">missed menstrual periods</li>
+				<li class="col-md-6">infertility or recurrent miscarriage</li>
+				<li class="col-md-6">canker sores inside the mouth</li>
+				<li class="col-md-6">dermatitis herpetiformis (itchy skin)</li>
 			</ul>
+		<blockquote>
 		<p>Celiac Disease can manifest itself at any age, so if you begin to experience any of these symptoms, it is worth talking to your doctor. </p>
+		</blockquote>
 		<img src='symptoms.jpg'>
 		<h4> A note about Hepatitis B vaccines </h4>
+		<blockquote>
 		<p>It has also been found that Hepatitis B vaccines given to people with undiagnosed Celiac Disease often do not work properly. If you suspect that you had Celiac Disease when you received this vaccine, you may need to be revaccinated. Your doctor can do a simple blood test to see if your vaccine worked.</p>
+		</blockquote>
 
 	<h2> Diagnosis </h2>
+		<blockquote>
 		<p> There are two stages of testing for Celiac Disease. First, there is a simple blood test to test for the antibodies associated with Celiac Disease. These are the antibodies produced by the immune system when  triggered by gluten that attack the villi in the small intestine. These tests, however, are unfortunately not always reliable, sometimes producing either false negatives or false positives. The only way to conclusively test for Celiac Disease is with an endoscopic biopsy of the small intestine. In order to undergo this test, a patient must eat gluten consistently for at least six to eight weeks. Doctors can then look at the biopsy, and the villi in the small intestine to determine whether the patient has Celiac Disease. </p>
+		</blockquote>
 
 	<h2> Treatment </h2>
+		<blockquote>
 		<p>The only treatment for Celiac Disease is following a strict gluten free diet. However, once on a gluten free diet, symptoms should improve but the time it takes for the gut to heal varies from person to person. Doctors say it can take three to six months for the gut to fully recover. It's also important to note that even a crumb can sometimes be enough to trigger the immune response associated with celiac disease, meaning that cheating on the gluten free diet is not an option. </p>
+		</blockquote>
 
 	<h2> Long Term Health Effects </h2>
+		<blockquote>
 		<p>It is important to adhere to a strict gluten free diet, because there are serious long term affect associated with untreated celiac disease. These include: </p>
+		</blockquote>
 		<ul>
-			<li>iron deficiency anemia</li>
-			<li>early onset osteoporosis or osteopenia</li>
-			<li>infertility and miscarriage</li>
-			<li>lactose intolerance</li>
-			<li>vitamin and mineral deficiencies</li>
-			<li>central and peripheral nervous system disorders, including ataxia, epileptic seizures, dementia, migraine, neuropathy, myopathy and multifocal leucoencephalopathy</li>
-			<li>pancreatic insufficiency</li>
-			<li>gall bladder malfunction</li>
-			<li>non-Hodgkin lymphoma (intestinal and extra-intestinal, T- and B-cell types)</li>
-			<li>small intestinal adenocarcinoma</li>
-			<li>esophageal carcinoma</li>
-			<li>papillary thyroid cancer</li>
-			<li>melanoma</li>
+			<li class="col-md-6">iron deficiency anemia</li>
+			<li class="col-md-6">early onset osteoporosis or osteopenia</li>
+			<li class="col-md-6">infertility and miscarriage</li>
+			<li class="col-md-6">lactose intolerance</li>
+			<li class="col-md-6">vitamin and mineral deficiencies</li>
+			<li class="col-md-6">central and peripheral nervous system disorders, including ataxia, epileptic seizures, dementia, migraine, neuropathy, myopathy and multifocal leucoencephalopathy</li>
+			<li class="col-md-6">pancreatic insufficiency</li>
+			<li class="col-md-6">gall bladder malfunction</li>
+			<li class="col-md-6">non-Hodgkin lymphoma (intestinal and extra-intestinal, T- and B-cell types)</li>
+			<li class="col-md-6">small intestinal adenocarcinoma</li>
+			<li class="col-md-6">esophageal carcinoma</li>
+			<li class="col-md-6">papillary thyroid cancer</li>
+			<li class="col-md-6">melanoma</li>
 		</ul>
 
 	<h2> Celiac vs. Gluten Intolerance </h2>
+		<blockquote>
 		<p>There is a significant difference between Celiac Disease and non-Celiac gluten sensitivity; the two should not be confused. Celiac Disease is a well defined, serious autoimmune disorder. It is not the same as an allergy or intolerance. Non-Celiac gluten sensitivity is when symptoms similar to coeliac disease are experienced, but there are no associated antibodies and no damage to the lining of the gut. The terms non-celiac gluten sensitivity (NCGS) and non-celiac wheat sensitivity (NCWS) are generally used to refer to this condition. A wheat allergy is a reaction to proteins found in wheat, triggered by the immune system and usually occurs within seconds or minutes of eating. Removing gluten from your diet can help relieve the symptoms of glute intolerance, however, it is not medically recommended to do this without talking to your doctor, because of other health effects this can cause. If you suspect you have an intolerance or worry that you may have Celiac Disease, you should see your doctor and discuss the best course of action. Remember that in order to be tested for Celiac Disease, you must be eating gluten regularly.</p>
+		</blockquote>
 </div>
 
 <div class='travel'>
-	<h1> Traveling with Celiac Disease </h1>
+	<img id='map' src='worldmap.jpg'>
+	<h1 class='section'> Traveling with Celiac Disease </h1>
+		<blockquote>
 		<p> When you travel, it is common to eat many meals at restaurants. If you have celiac disease, and you are traveling in a country where people do not speak your native language, it can be helpful to bring translation cards that describe celiac disease in the local language. </p>
+		</blockquote>
+		<blockquote>
 		<p> Websites such as <a href=http://www.celiactravel.com/>CeliacTravel.com</a> or <a href=http://www.triumphdining.com/>TriumphDining.com</a> provide translations of a description of celiac disease and a gluten free diet in many different languages. Below is a sample of the many languages available: </p>
+		</blockquote>
 	
-		<ul>
-			<li> <a href=http://www.celiactravel.com/cards/arabic/>Arabic</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/mandarin/>Chinese (Mandarin)</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/english/>English</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/dutch/>Dutch</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/french/>French</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/german/>German</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/greek/>Greek</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/hindi/>Hindi</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/italian/>Italian</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/japanese/>Japanese</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/korean/>Korean</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/persian/>Farsi</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/russian/>Russian</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/spanish/>Spanish</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/swahili/>Swahili</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/turkish/>Turkish</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/thai/>Thai</a></li>
-			<li> <a href=http://www.celiactravel.com/cards/vietnamese/>Vietnamese</a></li>
+		<ul >
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/arabic/>Arabic</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/mandarin/>Chinese (Mandarin)</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/english/>English</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/dutch/>Dutch</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/french/>French</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/german/>German</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/greek/>Greek</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/hindi/>Hindi</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/italian/>Italian</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/japanese/>Japanese</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/korean/>Korean</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/persian/>Farsi</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/russian/>Russian</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/spanish/>Spanish</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/swahili/>Swahili</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/turkish/>Turkish</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/thai/>Thai</a></li>
+			<li class="col-md-6"> <a href=http://www.celiactravel.com/cards/vietnamese/>Vietnamese</a></li>
 		</ul>
 </div>
 
 <div class='recipe'>
-	<h1> Recipes </h1>
+	<h1 class='section'> Recipes </h1>
 	<h2 id='appetizer' > Appetizer </h2>
 		<div id='appetizercontent'>
 		<h3> <a href=http://www.chelseasmessyapron.com/easy-almond-apple-quinoa-salad/>Quinoa Salad</a></h3>
-		<img src='quinoasalad.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' src='quinoasalad.jpg'>
 		</div>
 	<h2 id='entree' > Entree </h2>
 		<div id='entreecontent'>
 		<h3> <a href=https://www.whattheforkfoodblog.com/2015/08/13/ham-and-cheese-quiche/#.WMBXxhLyhPM>Ham and Cheese Quiche</a></h3>
-		<img src='quiche.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' src='quiche.jpg'>
 		</div>
 	<h2 id='dessert' > Dessert </h2>
 		<div id='dessertcontent'>
 		<h3> <a href=http://mygluten-freekitchen.com/the-best-chewy-gluten-free-chocolate-chip-cookies/>Chocolate Chip Cookies</a></h3>
-		<img src='chocolatechipcookies.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' src='chocolatechipcookies.jpg'>
 		</div>
+</div>
 
 </div>
 
