--- a/Celiac.html
+++ b/Celiac.html
@@ -27,6 +27,8 @@
 
 <body>
 
+<div id='container'>
+
 <header>
 
 <div id='nav'>
@@ -39,9 +41,9 @@
 </div>
 
 <div id='title'>
-
-	<h1 class='section'> A Celiac's Guide </h1>
-	<h2>to Gluten Free Living </h2>
+	<h2> Everything You Never Knew About </h2>
+	<h1 class='section'> Celiac Disease </h1>
+	<h2> A Celiac's Guide to Celiac Disease</h2>
 	<img src='glutenfree.png'>
 
 </div>
@@ -210,6 +212,7 @@
 		<h3> <a href=http://mygluten-freekitchen.com/the-best-chewy-gluten-free-chocolate-chip-cookies/>Chocolate Chip Cookies</a></h3>
 		<img class='col-sm-4' class='img-circle' class='text-center' src='chocolatechipcookies.jpg'>
 		</div>
+</div>
 
 </div>
 
