--- a/Celiac.html
+++ b/Celiac.html
@@ -121,7 +121,7 @@
 		<blockquote>
 		<p>Celiac Disease can manifest itself at any age, so if you begin to experience any of these symptoms, it is worth talking to your doctor. </p>
 		</blockquote>
-		<img src='symptoms.jpg'>
+		<img id='symptoms' src='symptoms.jpg'>
 		<h4> A note about Hepatitis B vaccines </h4>
 		<blockquote>
 		<p>It has also been found that Hepatitis B vaccines given to people with undiagnosed Celiac Disease often do not work properly. If you suspect that you had Celiac Disease when you received this vaccine, you may need to be revaccinated. Your doctor can do a simple blood test to see if your vaccine worked.</p>
@@ -156,6 +156,7 @@
 			<li class="col-md-6">papillary thyroid cancer</li>
 			<li class="col-md-6">melanoma</li>
 		</ul>
+
 
 	<h2> Celiac vs. Gluten Intolerance </h2>
 		<blockquote>
@@ -210,9 +211,11 @@
 	<h2 id='dessert' > Dessert </h2>
 		<div id='dessertcontent'>
 		<h3> <a href=http://mygluten-freekitchen.com/the-best-chewy-gluten-free-chocolate-chip-cookies/>Chocolate Chip Cookies</a></h3>
-		<img class='col-sm-4' class='img-circle' class='text-center' src='chocolatechipcookies.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' id='dessert' src='chocolatechipcookies.jpg'>
 		</div>
 </div>
+
+<blockquote> Thanks for reading! </blockquote>
 
 </div>
 
