--- a/Celiac Website/Celiac.html
+++ b/Celiac Website/Celiac.html
@@ -41,9 +41,9 @@
 </div>
 
 <div id='title'>
-
-	<h1 class='section'> A Celiac's Guide </h1>
-	<h2>to Gluten Free Living </h2>
+	<h2> Everything You Never Knew About </h2>
+	<h1 class='section'> Celiac Disease </h1>
+	<h2> A Celiac's Guide to Celiac Disease</h2>
 	<img src='glutenfree.png'>
 
 </div>
@@ -96,8 +96,10 @@
 				<li class="col-md-6">failure to thrive</li>
 				<li class="col-md-6">Attention Deficit Hyperactivity Disorder (ADHD)</li>
 			</ul>
+	
+<br>
 
-			<h3> Adults </h3>
+		<h3> Adults </h3>
 			<blockquote>
 			<p> Adults often do not experience the same digestive symptoms. Here are some other signs to look for: </p>
 			</blockquote>
@@ -121,7 +123,7 @@
 		<blockquote>
 		<p>Celiac Disease can manifest itself at any age, so if you begin to experience any of these symptoms, it is worth talking to your doctor. </p>
 		</blockquote>
-		<img src='symptoms.jpg'>
+		<img id='symptoms' src='symptoms.jpg'>
 		<h4> A note about Hepatitis B vaccines </h4>
 		<blockquote>
 		<p>It has also been found that Hepatitis B vaccines given to people with undiagnosed Celiac Disease often do not work properly. If you suspect that you had Celiac Disease when you received this vaccine, you may need to be revaccinated. Your doctor can do a simple blood test to see if your vaccine worked.</p>
@@ -156,6 +158,7 @@
 			<li class="col-md-6">papillary thyroid cancer</li>
 			<li class="col-md-6">melanoma</li>
 		</ul>
+
 
 	<h2> Celiac vs. Gluten Intolerance </h2>
 		<blockquote>
@@ -197,22 +200,33 @@
 
 <div class='recipe'>
 	<h1 class='section'> Recipes </h1>
-	<h2 id='appetizer' > Appetizer </h2>
-		<div id='appetizercontent'>
+	
+	<div class="col-md-4">
+	<h2 id='appetizer' class="col-md-4"> Appetizer </h2>
+		<div class='mealcontent'>
 		<h3> <a href=http://www.chelseasmessyapron.com/easy-almond-apple-quinoa-salad/>Quinoa Salad</a></h3>
-		<img class='col-sm-4' class='img-circle' class='text-center' src='quinoasalad.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' id='meal' src='quinoasalad.jpg'>
 		</div>
-	<h2 id='entree' > Entree </h2>
-		<div id='entreecontent'>
+	</div>
+	
+	<div class="col-md-4">
+	<h2 id='entree' class="col-md-4"> Entree </h2>
+		<div class='mealcontent'>
 		<h3> <a href=https://www.whattheforkfoodblog.com/2015/08/13/ham-and-cheese-quiche/#.WMBXxhLyhPM>Ham and Cheese Quiche</a></h3>
-		<img class='col-sm-4' class='img-circle' class='text-center' src='quiche.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' id='meal' src='quiche.jpg'>
 		</div>
+	</div>
+
+	<div class="col-md-4">
 	<h2 id='dessert' > Dessert </h2>
-		<div id='dessertcontent'>
+		<div class='mealcontent'>
 		<h3> <a href=http://mygluten-freekitchen.com/the-best-chewy-gluten-free-chocolate-chip-cookies/>Chocolate Chip Cookies</a></h3>
-		<img class='col-sm-4' class='img-circle' class='text-center' src='chocolatechipcookies.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' id='meal' src='chocolatechipcookies.jpg'>
 		</div>
+	</div>
 </div>
+
+<blockquote> <p> Thanks for reading! </p> </blockquote>
 
 </div>
 
