--- a/Celiac Website/Celiac.html
+++ b/Celiac Website/Celiac.html
@@ -213,7 +213,7 @@
 	<h2 id='entree' class="col-md-4"> Entree </h2>
 		<div class='mealcontent'>
 		<h3> <a href=https://www.whattheforkfoodblog.com/2015/08/13/ham-and-cheese-quiche/#.WMBXxhLyhPM>Ham and Cheese Quiche</a></h3>
-		<img class='col-sm-4' class='img-circle' class='text-center' id='meal' src='quiche.jpg'>
+		<img class='col-sm-4' class='img-circle' class='text-center' id='meal' src='Quiche.jpg'>
 		</div>
 	</div>
 
